// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkCheckboxCard (compound component) should render correctly when checked 1`] = `
<DocumentFragment>
  <div
    aria-checked="true"
    aria-describedby=":r4:"
    aria-labelledby=":r3:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--checked"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r3:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly when disabled 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r7:"
    aria-disabled="true"
    aria-labelledby=":r6:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--disabled"
    role="checkbox"
    tabindex="-1"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r6:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly with all content slots 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":ra:"
    aria-labelledby=":r9:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r9:"
        >
          City Centre
        </span>
      </div>
      <div
        class="bpk-checkbox-card-description"
        style="--bpk-description-line-clamp: 3;"
      >
        <span
          class="bpk-text bpk-text--body-default"
          data-backpack-ds-component="Text"
          id=":ra:"
        >
          Central location
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render correctly with minimal props 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r1:"
    aria-labelledby=":r0:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r0:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render disabled and checked state correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="true"
    aria-describedby=":rp:"
    aria-disabled="true"
    aria-labelledby=":ro:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded bpk-checkbox-card-root--checked bpk-checkbox-card-root--disabled"
    role="checkbox"
    tabindex="-1"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":ro:"
        >
          Disabled selected
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onCanvasContrast variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rg:"
    aria-labelledby=":rf:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-contrast bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rf:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onCanvasDefault variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rd:"
    aria-labelledby=":rc:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rc:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render onSurfaceContrast variant correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rj:"
    aria-labelledby=":ri:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-surface-contrast bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":ri:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render square radius correctly 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":rm:"
    aria-labelledby=":rl:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-square"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":rl:"
        >
          Select option
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkCheckboxCard (compound component) should render with extremely long label text 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-describedby=":r1q:"
    aria-labelledby=":r1p:"
    class="bpk-checkbox-card-root bpk-checkbox-card-root--on-canvas-default bpk-checkbox-card-root--radius-rounded"
    role="checkbox"
    tabindex="0"
  >
    <div
      class="bpk-checkbox-card-content bpk-checkbox-card-content--size-md"
    >
      <div
        class="bpk-checkbox-card-label"
        style="--bpk-label-line-clamp: 2;"
      >
        <span
          class="bpk-text bpk-text--heading-5"
          data-backpack-ds-component="Text"
          id=":r1p:"
        >
          This is an extremely long label that will definitely exceed the maximum line count and should be truncated
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
